CHANGES.txt - 10/01/2002
------------------------

CHANGES IN CUPS V1.1.16

	- The lp and lpr commands did not return an error when
	  one or more files in a set of files for printing could
	  not be printed.
	- The lp, lpadmin, and lpstat commands now consistently
	  return with a non-zero exit status when an error
	  occurs.
	- The scheduler would not accept print jobs sent to a
	  stopped remote printer.
	- The texttops filter incorrectly converted the page
	  numbers in the prettyprint header to double-byte
	  characters when printing a non-Unicode text file. This
	  caused an extra space to appear between each digit in
	  the page number.
	- The scheduler did not use a case-insensitive
	  comparison when adding filters for a printer.
	- Upgraded the pdftops filter to Xpdf 1.01.
	- The scheduler no longer passes the page-border and
	  number-up-layout attributes to filters when printing
	  banner pages.
	- The LPD backend now uses a 30-second timeout when
	  sending commands and control files, and a 30-second
	  timeout when retrieving responses from an LPD server. 
	  If a timeout occurs, it retries indefinitely.  This
	  helps to make LPD printing over VPNs work more
	  reliably.
	- The USB backend now supports device URIs based on the
	  printer serial number and/or model number under Linux.
	  This avoids the "wrong device filename" problem when
	  using more than one USB printer.
	- Now just shutdown the receiving end of a client
	  connection when sending an error that requires the
	  server to disconnect from the client afterwards.  This
	  fixes a problem when doing remote administration with
	  encryption enabled.
	- The scheduler did not send a printer-state-message
	  attribute if the string was empty; it now always sends
	  this attribute.  This caused the printer message to be
	  displayed for other printers in the web interface.
	- The LPD backend now supports a "manual_copies" option,
	  e.g.: "lpd://server/queue?manual_copies=no", in order